fix: adjust collapse title styling

--- a/src/components/molecules/modus-wc-collapse/modus-wc-collapse.scss
+++ b/src/components/molecules/modus-wc-collapse/modus-wc-collapse.scss
@@ -13,6 +13,11 @@
 [data-theme='modus-classic-light'] .modus-wc-collapse,
 [data-theme='modus-classic-dark'] .modus-wc-collapse {
   border-radius: var(--modus-wc-border-radius-md);
+
+  .modus-wc-collapse-title {
+    min-height: unset;
+    width: auto;
+  }
 }
 
 [data-theme='modus-classic-light'] .modus-wc-collapse {
